# cage-stats

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  conftest.py  pyproject.toml  requirements.txt
cage_stats/: __init__.py  __main__.py  api.py  cli.py
cage_stats/config/: __init__.py  config.py
cage_stats/fleet/: __init__.py  fleet.py  resolve.py
cage_stats/gpu/: __init__.py  amd.py  intel.py  provider.py  sysfs.py
cage_stats/metrics/: __init__.py  engine.py  parse.py  state.py  timeseries.py
cage_stats/providers/: __init__.py  docker.py  logsource.py  mock.py  proxy.py  vllm.py
cage_stats/ui/: __init__.py  app.py  display.py  render.py  text.py  widgets.py
config/: __init__.py  config.py
fleet/: __init__.py  fleet.py  resolve.py
gpu/: __init__.py  amd.py  intel.py  provider.py
metrics/: __init__.py  engine.py  kv.py  state.py
providers/: __init__.py  docker.py  logsource.py  mock.py  proxy.py  tee.py
tests/: test_api.py  test_external_kv.py  test_phase_histograms.py  test_text.py  test_timeseries.py
ui/: __init__.py  app.py  render.py  widgets.py
